Changes in shFlags 1.0.x
========================

Changes with 1.0.2
------------------

FLAGS_PARENT no longer transforms into a constant so that it can be defined at
run time in scripts.

Added warning about short flags being unsupported when there are problems
parsing the options with getopt.

Add default values to end of description strings.

Fixed bug that returned an error instead of success when recalling the default
values for empty strings.

Added warning when a duplicate flag definition is attempted.

Improved assert[Warn|Error]Msg() test helper grepping.

Replaced shell_versions.sh with a new versions library and created
gen_test_results.sh to make releases easier.

Copied the coding standards from shUnit2, but haven't fully implemented them
in shFlags yet.

Issue# 1: When a user defines their own --help flag, no more warning is thrown
when FLAGS() is called stating that the help flag already defined.

Issue# 2: Passing the --nohelp option no longer gives help output.


Changes with 1.0.1
------------------

Fixed bug where the help output added [no] to all flag names

Added additional example files that are referenced by the documentation.

Improved zsh version and option checking.

Upgraded shUnit2 to 2.1.4

Added unit testing for the help output.

When including a library (e.g. shflags) in a script, zsh 3.0.8 doesn't actually
execute the code in-line, but later. As such, variables that are defined in the
library cannot be used until functions are called from the main code. This
required the 'help' flag definition to be moved inside the FLAGS command.


Changes with 1.0.0
------------------

This is the first official release, so everything is new.


.. vim:spell
.. $Id$